--- a/docker-compose.playwright.yaml
+++ b/docker-compose.playwright.yaml
@@ -1,3 +1,9 @@
+#ddev-generated
+# Remove the line above if you don't want this file to be overwritten when you run
+# ddev get julienloizelet/ddev-playwright
+#
+# This file comes from https://github.com/julienloizelet/ddev-playwright
+#
 version: '3.6'
 services:
   playwright:
