--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -10,9 +10,12 @@ on:
   workflow_dispatch:
     inputs:
       debug_enabled:
-        description: 'Debug with tmate set "debug_enabled"'
-        required: false
-        default: "false"
+        type: boolean
+        description: Debug with tmate
+        default: false
+
+permissions:
+  contents: write
 
 defaults:
   run:
@@ -20,7 +23,7 @@ defaults:
 
 env:
   NIGHTLY_DDEV_PR_URL: "https://nightly.link/ddev/ddev/actions/runs/1720215802/ddev-linux-amd64.zip"
-  # Allow ddev get to use a github token to prevent rate limiting by tests
+  # Allow ddev get to use a GitHub token to prevent rate limiting by tests
   DDEV_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   # Allow `--HEAD` flag when running tests against HEAD
   HOMEBREW_NO_INSTALL_FROM_API: 1
@@ -69,15 +72,14 @@ jobs:
         mv ddev /usr/local/bin/ddev && chmod +x /usr/local/bin/ddev
 
     - name: Download docker images
-      run: | 
-        mkdir junk && pushd junk && ddev config --auto && ddev debug download-images >/dev/null
-        docker pull memcached:1.6 >/dev/null
+      run: mkdir junk && pushd junk && ddev config --auto && ddev debug download-images >/dev/null
+
     - name: tmate debugging session
       uses: mxschmitt/action-tmate@v3
       with:
         limit-access-to-actor: true
         github-token: ${{ secrets.GITHUB_TOKEN }}
-      if: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.debug_enabled == 'true'}}
+      if: github.event.inputs.debug_enabled == 'true'
 
     - name: tests
       run: bats tests
@@ -86,5 +88,8 @@ jobs:
     # GitHub from turning off tests after 60 days
     - uses: gautamkrishnar/keepalive-workflow@v1
       if: matrix.ddev_version == 'stable'
+      with:
+        commit_message: "chore(*): Automated commit to keep the repository active"
+        time_elapsed: 55
 
 
