--- a/docker-compose.playwright.yaml
+++ b/docker-compose.playwright.yaml
@@ -19,7 +19,7 @@ services:
     depends_on:
       - web
     volumes:
-      - ../:/var/www/html:rw
+      - ../:/var/www/html/html:rw
     external_links:
       - ddev-router:${DDEV_HOSTNAME}
     command: tail -F anything
