--- a/install.yaml
+++ b/install.yaml
@@ -2,4 +2,6 @@ name: playwright
 
 # list of files and directories listed that are copied into project .ddev directory
 project_files:
+- commands
+- playwright-build
 - docker-compose.playwright.yaml
