--- a/install.yaml
+++ b/install.yaml
@@ -2,6 +2,7 @@ name: playwright
 
 # list of files and directories listed that are copied into project .ddev directory
 project_files:
-- commands
-- playwright-build
+- commands/playwright/playwright
+- playwright-build/Dockerfile
+- playwright-build/kasmvnc.yaml
 - docker-compose.playwright.yaml
