Set default working_dir

--- a/docker-compose.playwright.yaml
+++ b/docker-compose.playwright.yaml
@@ -34,3 +34,4 @@ services:
     external_links:
       - ddev-router:${DDEV_HOSTNAME}
     command: bash -c 'mkcert -install && vncserver -fg'
+    working_dir: /var/www/html
