--- a/tests/project_root/tests/Playwright/.env.example
+++ b/tests/project_root/tests/Playwright/.env.example
@@ -1,13 +1,9 @@
-#!/bin/bash
 #ddev-generated
 # Remove the line above if you don't want this file to be overwritten when you run
 # ddev get julienloizelet/ddev-playwright
 #
 # This file comes from https://github.com/julienloizelet/ddev-playwright
 #
-cd /var/www/html || exit 1
-cd "${PLAYWRIGHT_TEST_DIR}" || exit 1
+BASEURL="https://ddev-playwright-test.ddev.site"
 
-USER="$(stat -c "%U" .)"
-
-sudo -u "${USER}" yarn playwright "$@"
+PAGE_URL="/home.php"
