Actually use the new entrypoint :) Add a test for the VNC connection

--- a/playwright-build/Dockerfile
+++ b/playwright-build/Dockerfile
@@ -57,4 +57,5 @@ RUN sudo -u pwuser /bin/bash -c 'echo -e "secret\nsecret\n" | kasmvncpasswd -wo 
 # We're done with apt so disable caching again for the final image.
 RUN mv /etc/apt/docker-clean-disabled /etc/apt/apt.conf.d/docker-clean
 
-CMD vncserver -fg
+COPY entrypoint.sh /root/entrypoint.sh
+ENTRYPOINT "/root/entrypoint.sh"
