--- a/docker-compose.playwright.yaml
+++ b/docker-compose.playwright.yaml
@@ -15,6 +15,7 @@ services:
       com.ddev.site-name: ${DDEV_SITENAME}
       com.ddev.approot: $DDEV_APPROOT
     environment:
+      # Modify the PLAYWRIGHT_TEST_DIR folder path to suit your needs
       - PLAYWRIGHT_TEST_DIR=tests/Playwright
       - NETWORK_IFACE=eth0
       - DISPLAY=:1
