test(action): Test specific version of add-on init github action

--- a/.github/workflows/tests-with-action.yml
+++ b/.github/workflows/tests-with-action.yml
@@ -42,7 +42,7 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - uses: julienloizelet/ddev-add-on-test-init@main
+    - uses: julienloizelet/ddev-add-on-test-init@v0.0.1
       with:
         ddev_version: ${{ matrix.ddev_version }}
 
