--- a/.github/workflows/tests-with-action.yml
+++ b/.github/workflows/tests-with-action.yml
@@ -19,18 +19,11 @@ on:
 permissions:
   contents: write
 
-defaults:
-  run:
-    shell: bash
-
 env:
   DDEV_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
   tests-with-action:
-    defaults:
-      run:
-        shell: bash
 
     strategy:
       matrix:
@@ -40,20 +33,13 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-    - uses: actions/checkout@v3
 
-    - uses: julienloizelet/ddev-add-on-test@v0.2.0
+    - uses: julienloizelet/ddev-add-on-test@v0.3.0
       with:
         ddev_version: ${{ matrix.ddev_version }}
         token: ${{ secrets.GITHUB_TOKEN }}
         debug_enabled: ${{ github.event.inputs.debug_enabled }}
-
-    # keepalive-workflow adds a dummy commit if there's no other action here, keeps
-    # GitHub from turning off tests after 60 days
-    - uses: gautamkrishnar/keepalive-workflow@v1
-      if: matrix.ddev_version == 'stable'
-      with:
-        commit_message: "chore(*): Automated commit to keep the repository active"
-        time_elapsed: 55
+        addon_repository: ${{ env.GITHUB_REPOSITORY }}
+        addon_ref: ${{ env.GITHUB_REF }}
 
 
