ci(test): Use github-action-add-on-test@v2

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -17,7 +17,7 @@ on:
         default: false
 
 permissions:
-  contents: write
+  actions: write
 
 jobs:
   tests:
@@ -31,7 +31,7 @@ jobs:
 
     steps:
 
-    - uses: ddev/ddev-add-on-test@v1
+    - uses: ddev/ddev-add-on-test@v2
       with:
         ddev_version: ${{ matrix.ddev_version }}
         token: ${{ secrets.GITHUB_TOKEN }}
