feat(*): Prepare release 2.2.1

--- a/.github/workflows/doc-links.yml
+++ b/.github/workflows/doc-links.yml
@@ -1,18 +1,22 @@
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
-name: Markdown files test and update
+name: Documentation links check
 
 permissions:
-  contents: write
-  pull-requests: write
+  contents: read
 
 jobs:
-  markdown-test-and-update:
+  markdown-test-links:
     name: Markdown files test and update
     runs-on: ubuntu-latest
     steps:
-
       - name: Clone sources
         uses: actions/checkout@v4
         with:
@@ -33,12 +37,3 @@ jobs:
           gem install awesome_bot
           cd extension
           awesome_bot --files README.md --allow-dupe --allow 401 --skip-save-results --white-list ddev.site --base-url http://localhost:8080/
-
-      - name: Generate table of contents
-        uses: technote-space/toc-generator@v4
-        with:
-          MAX_HEADER_LEVEL: 5
-          COMMIT_NAME: Okaeli Dev Bot
-          TARGET_PATHS: 'README.md'
-          CHECK_ONLY_DEFAULT_BRANCH: true
-          CREATE_PR: true
