--- a/playwright-build/kasmvnc.yaml
+++ b/playwright-build/kasmvnc.yaml
@@ -1,6 +1,6 @@
 #ddev-generated
 # Remove the line above if you don't want this file to be overwritten when you run
-# ddev get julienloizelet/ddev-playwright
+# ddev add-on get julienloizelet/ddev-playwright
 #
 # This file comes from https://github.com/julienloizelet/ddev-playwright
 #
