--- a/docker-compose.playwright.yaml
+++ b/docker-compose.playwright.yaml
@@ -1,21 +1,25 @@
 #ddev-generated
 # Remove the line above if you don't want this file to be overwritten when you run
-# ddev get julienloizelet/ddev-playwright
+# ddev add-on get julienloizelet/ddev-playwright
 #
 # This file comes from https://github.com/julienloizelet/ddev-playwright
 #
 services:
   playwright:
+    image: ${PLAYWRIGHT_DOCKER_IMAGE:-mcr.microsoft.com/playwright:focal}-${DDEV_SITENAME}-built
     build:
       context: playwright-build
       args:
         PLAYWRIGHT_DOCKER_IMAGE: ${PLAYWRIGHT_DOCKER_IMAGE:-mcr.microsoft.com/playwright:focal}
+        uid: ${DDEV_UID}
+        gid: ${DDEV_GID}
     container_name: ddev-${DDEV_SITENAME}-playwright
+    user: "${DDEV_UID}:${DDEV_GID}"
     hostname: ${DDEV_SITENAME}-playwright
     # These labels ensure this service is discoverable by ddev.
     labels:
       com.ddev.site-name: ${DDEV_SITENAME}
-      com.ddev.approot: $DDEV_APPROOT
+      com.ddev.approot: ${DDEV_APPROOT}
     environment:
       # Modify the PLAYWRIGHT_TEST_DIR folder path to suit your needs
       - PLAYWRIGHT_TEST_DIR=tests/Playwright
@@ -24,8 +28,6 @@ services:
       - VIRTUAL_HOST=$DDEV_HOSTNAME
       - HTTP_EXPOSE=8443:8444,9322:9323
       - HTTPS_EXPOSE=8444:8444,9323:9323
-      - DDEV_UID=${DDEV_UID}
-      - DDEV_GID=${DDEV_GID}
     expose:
       - "8444"
       - "9323"
@@ -36,3 +38,5 @@ services:
       - ddev-global-cache:/mnt/ddev-global-cache
       - ../:/var/www/html:rw
     working_dir: /var/www/html
+    x-ddev:
+      ssh-shell: bash
