--- a/docker-compose.playwright.yaml
+++ b/docker-compose.playwright.yaml
@@ -11,6 +11,7 @@ services:
       context: playwright-build
       args:
         PLAYWRIGHT_DOCKER_IMAGE: ${PLAYWRIGHT_DOCKER_IMAGE:-mcr.microsoft.com/playwright:focal}
+        KASMVNC_VERSION: ${KASMVNC_VERSION:-1.4.0}
         username: ${DDEV_USER}
         uid: ${DDEV_UID}
         gid: ${DDEV_GID}
